cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/comp_inv.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/comp_inv.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  ---------------------------
  (1/2) An invariant is used.
  ---------------------------
   * In the top-level scope of the specification:
     - invariant i;
       ^

  ----------------------------------------------------------------------------
  (2/2) Specification does not have at least 1 automaton (no automaton found).
  ----------------------------------------------------------------------------
